<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/outline_bike_lane_24"
            android:title="@string/menu_parking_event_trigger" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_format_list_bulleted_24"
            android:title="@string/menu_parking_areas" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/outline_accessibility_new_24"
            android:title="@string/menu_personal_parking_events" />
    </group>
</menu>