<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.contextaware.app_bpm.ui.parkme.ParkMeFragment"
        android:label="@string/menu_parking_event_trigger"
        tools:layout="@layout/fragment_parkme" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.contextaware.app_bpm.ui.parkingareas.ParkingAreasFragment"
        android:label="@string/menu_parking_areas"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.contextaware.app_bpm.ui.personalevents.PersonalEventsFragment"
        android:label="@string/menu_personal_parking_events"
        tools:layout="@layout/fragment_slideshow" />
</navigation>